--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@zxing/library": "^0.21.3",
     "next": "16.0.5",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.67.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
